--- a/mainPage.html
+++ b/mainPage.html
@@ -18,21 +18,45 @@
 
 
 <body>
+<!-- News carousel -->
+<div id="newsCarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="item active">
+          <img class="d-block w-100" src="media/Overwatch_Vignette.jpg" alt="First slide" style="width:100%">
+        </div>
+        <div class="item">
+          <img class="d-block w-100" src="media/COD_vignette.jpg" alt="Second slide" style="width:100%">
+        </div>
+        <div class="item">
+          <img class="d-block w-100" src="media/WOW_Vignette.jpg" alt="Third slide" style="width:100%">
+        </div>
+        <div class="item">
+            <img class="d-block w-100" src="media/HS_Vignette.jpg" alt="Third slide" style="width:100%">
+        </div>
+    </div>
+    <a class="left carousel-control" href="#newsCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#newsCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
 <!-- Head navigation bar -->
-<nav class="navBarContainer">
+<nav class="navBarContainer" id="navBar">
     <div class ="container-fluid navBar">
         <div class="row" style="height: 4.5vw">
             <div class="col-sm-1">
                 <a class="navBarLogo">
-                    <img src="media/blizzard_logo.png" style="width:100%">
-                    </img>
+                    <img src="media/blizzard_logo.png" style="width:100%"></img>
                 </a>
             </div>
             <div class="col-sm-8 navBarMenuBtn">
                 <div class="row">
                     <div class="col-sm-6 navBarMenuBtnRow">
-                        <a onclick="showOverlay('games')">
+                        <a id="navBarMenuBtnGames">
                             games &#9660
                         </a>
                         <a>
@@ -41,24 +65,23 @@
                         <a>
                             news
                         </a>
-                        <a onclick="showOverlay('esport')">
+                        <a id="navBarMenuBtnEsport">
                             esport &#9660 
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3" style="height: 4.5vw">
-                <div class="navBarClientBtn">
+            <div class="col-sm-3 navBarClientBtn">
+                <div class="navBarClientBtnSupport">
                     <a>
                         Support
                     </a>
-                    <a onclick="showOverlay('login')">
-                        My Account
+                    <a id="navBarClientBtnAcount">
+                        My Account &#9660
                     </a>
                 </div>
             </div>
         </div>
-        
     </div>
 </nav>
 
@@ -74,6 +97,28 @@ function showOverlay(menuName){
     else
         alert("Oops! You are trying to reach an unknown page");
 }
+
+$(document).ready(function(){
+    $(".carousel-control").hide();
+
+    $("#navBarMenuBtnGames").click(function(){
+        alert("Clicked on the nav bar menu button games");
+    });
+    
+    $("#navBarMenuBtnEsport").click(function(){
+        alert("Clicked on the nav bar menu button esport");
+    });
+
+    $("#newsCarousel").on({
+        mouseenter: function(){
+            $(".carousel-control").show();
+        },
+
+        mouseleave: function(){
+            $(".carousel-control").hide();
+        }
+    });
+});
 </script>
 
 </body>    
