Layout for game catalogue

--- a/mainPage.html
+++ b/mainPage.html
@@ -85,6 +85,62 @@
     </div>
 </nav>
 
+<!-- Games catalogue -->
+<div class="gameCtlg">
+    <div class="gameCtlgTitleContainer">
+        <div class="gameCtlgHeader">
+            Games <a class="allGamesLink"> View all games > </a>
+        </div>
+    </div>
+    <div class=ctlgContainer>
+        <div class="row">
+            <div class="carousel slide multi-item-carousel" id="gameCtlg">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class ="col-sm-2">
+                            <a><img></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
 function showOverlay(menuName){
