--- a/mainPage.html
+++ b/mainPage.html
@@ -22,16 +22,16 @@
 <div id="newsCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="item active">
-          <img class="d-block w-100" src="media/Overwatch_Vignette.jpg" alt="First slide" style="width:100%">
+          <img class="d-block w-100" src="media/Overwatch_Vignette.jpg" alt="First slide" style="width:100%;height:56.3vw">
         </div>
         <div class="item">
-          <img class="d-block w-100" src="media/COD_vignette.jpg" alt="Second slide" style="width:100%">
+          <img class="d-block w-100" src="media/COD_vignette.jpg" alt="Second slide" style="width:100%;height:56.3vw">
         </div>
         <div class="item">
-          <img class="d-block w-100" src="media/WOW_Vignette.jpg" alt="Third slide" style="width:100%">
+          <img class="d-block w-100" src="media/WOW_Vignette.jpg" alt="Third slide" style="width:100%;height:56.3vw">
         </div>
         <div class="item">
-            <img class="d-block w-100" src="media/HS_Vignette.jpg" alt="Third slide" style="width:100%">
+            <img class="d-block w-100" src="media/HS_Vignette.jpg" alt="Third slide" style="width:100%;height:56.3vw">
         </div>
     </div>
     <a class="left carousel-control" href="#newsCarousel" data-slide="prev">
@@ -98,45 +98,49 @@
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                     <div class="item">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                     <div class="item">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                     <div class="item">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                     <div class="item">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                     <div class="item">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                     <div class="item">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                     <div class="item">
                         <div class ="col-sm-2">
-                            <a><img></a>
+                            <a><img src="media/ctlgImg/DCtlg.jpg" class="img-responsive"></a>
                         </div>
                     </div>
                 </div>
+            </div>
+            </div>
+                <a class="left carousel-control" href="#gameCtlg" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                <a class="right carousel-control" href="#gameCtlg" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
             </div>
         </div>
     </div>
